# p8n-importer

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
P8nImporter/: cli.py
P8nImporter/config/: urls.py
P8nImporter/formats/: __init__.py  asr_importer.py  iam_importer.py
P8nImporter/utilities/: importer.py
src/: cli.py  uploader.py
src/api/: dataset_api.py  datasets.py
src/config/: urls.py
src/formats/: __init__.py  base_importer.py  classification_importer.py  coco_json_importer.py  parquet_importer.py  tabular_importer.py  voc_importer.py  yolov8_importer.py
src/utilities/: api.py  file.py  mapping.py  visualize.py
